sharding-jdbc 基本使用以及自定义分表规则

--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,6 @@ include 'netty-im:server'
 findProject(':netty-im:server')?.name = 'server'
 include 'netty-im:common'
 findProject(':netty-im:common')?.name = 'common'
+include 'spring-all'
+include 'sharding-jdbc'
 
