--- a/sharding-table/src/main/resources/application.properties
+++ b/sharding-table/src/main/resources/application.properties
@@ -1,29 +1,49 @@
 server.port=8084
 
+# 指定数据源的名称，可以是昵称，但是在DataSource.name 保持一致
+spring.shardingsphere.datasource.names=myds0,myds1
 
-spring.shardingsphere.datasource.names=master
+# 数据源 0
+spring.shardingsphere.datasource.myds0.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.myds0.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.myds0.url=jdbc:mysql://localhost:3306/myds0?characterEncoding=utf-8
+spring.shardingsphere.datasource.myds0.username=root
+spring.shardingsphere.datasource.myds0.password=123456
 
-# 数据源
-spring.shardingsphere.datasource.master.type=com.alibaba.druid.pool.DruidDataSource
-spring.shardingsphere.datasource.master.driver-class-name=com.mysql.jdbc.Driver
-spring.shardingsphere.datasource.master.url=jdbc:mysql://localhost:3306/myds0?characterEncoding=utf-8
-spring.shardingsphere.datasource.master.username=root
-spring.shardingsphere.datasource.master.password=123456
+# 数据源1
+spring.shardingsphere.datasource.myds1.type=com.alibaba.druid.pool.DruidDataSource
+spring.shardingsphere.datasource.myds1.driver-class-name=com.mysql.jdbc.Driver
+spring.shardingsphere.datasource.myds1.url=jdbc:mysql://localhost:3306/myds1?characterEncoding=utf-8
+spring.shardingsphere.datasource.myds1.username=root
+spring.shardingsphere.datasource.myds1.password=123456
 
-# 分表配置
-spring.shardingsphere.sharding.tables.user.actual-data-nodes=master.user_${0..3}
+# 数据库的分片列与分片算法
+spring.shardingsphere.sharding.default-database-strategy.inline.sharding-column=sex
+spring.shardingsphere.sharding.default-database-strategy.inline.algorithm-expression=myds$->{sex % 2}
+
+#spring.shardingsphere.sharding.default-database-strategy.standard.sharding-column=sex
+#spring.shardingsphere.sharding.default-database-strategy.standard.precise-algorithm-class-name=
+
+# 分表配置,实际的分表节点
+spring.shardingsphere.sharding.tables.user.actual-data-nodes=myds$->{0..1}.user$->{0..1}
+# inline 表达式
+#spring.shardingsphere.sharding.tables.user.table-strategy.inline.sharding-column=id
+#spring.shardingsphere.sharding.tables.user.table-strategy.inline.algorithm-expression=user$->{id % 2}
 
 # 自定义分表算法
-#spring.shardingsphere.sharding.tables.user.table-strategy.standard.sharding-column=id
-#spring.shardingsphere.sharding.tables.user.table-strategy.standard.precise-algorithm-class-name=sharding.algorithm.MyPreciseShardingAlgorithm
+spring.shardingsphere.sharding.tables.user.table-strategy.standard.sharding-column=id
+spring.shardingsphere.sharding.tables.user.table-strategy.standard.precise-algorithm-class-name=sharding.algorithm.MyPreciseShardingAlgorithm
 
-# inline 表达式
-spring.shardingsphere.sharding.tables.user.table-strategy.inline.sharding-column=id
-spring.shardingsphere.sharding.tables.user.table-strategy.inline.algorithm-expression=user_${id.longValue() % 4}
 
-spring.main.allow-bean-definition-overriding=true
+spring.shardingsphere.props.sql.show= true
+spring.main.allow-bean-definition-overriding= true
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/myds0?characterEncoding=utf-8
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=123456
 mybatis.mapper-locations: classpath:/mapper/*Mapper.xml
 mybatis.type-aliases-package: sharding.po
-mybatis.configuration.use-actual-param-name: true
+mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
